Added about page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div class="page" id="home">
+    <div class="page" id="home-page">
       <div class="hidden-xs"><br>
         <div id="home-carousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -127,22 +127,84 @@
       </div>
     </div> <!-- #home -->
 
-    <div class="page" id="about">
+    <div class="page" id="about-page">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1>About Iris Krasnow</h1>
+        </div>
+      </div>
+      <div class="hidden-xs"><br>
+      <div class="row text-center">
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_surrendering_motherhood.htm">
+          <img class="img-rounded book" src="img/surrendermotherhood.jpg" alt="Surrendering to Motherhood Cover">
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_surrendering_marriage.htm">
+          <img class="img-rounded book" src="img/surrendermarriage.jpg" alt="Surrendering to Marriage Cover">
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_surrendering_to_yourself.htm">
+          <img class="img-rounded book" src="img/surrenderyourself.jpg" alt="Surrendering to Yourself Cover">
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_mothers_daughter.htm">
+          <img class="img-rounded book" src="img/mothersdaughter.jpg" alt="I Am My Mother's Daughter Cover">
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_secret_lives_of_wives.htm">
+          <img class="img-rounded book" src="img/livesofwives.jpg" alt="The Secret Lives of Wives Cover">
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="http://iriskrasnow.com/_pages/book_sex_after.htm">
+          <img class="img-rounded book" src="img/sexafter.jpg" alt="Sex After ... Cover">
+          </a>
+        </div>
+      </div>
+      <br>
+      </div> <!-- hidden-xs -->
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <br><br>
+          <a href="http://iriskrasnow.com/">
+          <img class="img-rounded" src="img/aboutiris.jpg" alt="Iris Krasnow">
+          </a>
+          <br><br>
+        </div>
+        <div class="col-md-8">
+          <p>Iris Krasnow was born and raised in Oak Park, Illinois. A graduate of Stanford University, she became the fashion writer for the <i>Dallas Times-Herald</i>, and then moved to United Press International in Washington, D.C. to become the national feature writer. </p>
+          <p>In her several years at UPI, Krasnow specialized in celebrity profiles, including Yoko Ono, Billy Graham, Ted Kennedy, Norman Mailer and Queen Noor of Jordan.</p>
+          <p>Iris is the author of <a href="http://iriskrasnow.com/_pages/book_surrendering_motherhood.htm">Surrendering to Motherhood</a>, the New York Times bestseller <a href="http://iriskrasnow.com/_pages/book_surrendering_marriage.htm">Surrendering to Marriage</a>, <a href="http://iriskrasnow.com/_pages/book_surrendering_to_yourself.htm">Surrendering to Yourself</a> (Miramax Books), and <a href="http://iriskrasnow.com/_pages/book_mothers_daughter.htm">I Am My Mother's Daughter</a> (Basic Books). </p>
+          <p><a href="http://iriskrasnow.com/_pages/book_secret_lives_of_wives.htm">The Secret Lives of Wives</a>,  published in October 2011 by Penguin/Gotham Books, continues her journey as a journalist who chronicles the adult female growth cycle.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p>Her writing has been featured in many national publications, including <i>Parade, The Wall Street Journal, The Washington Post </i>and<i> AARP The Magazine</i>. Iris has been a guest on numerous national television and radio programs including <i>Oprah</i>, <i>Good Morning America</i>, <i>Today</i>, <i>All Things Considered</i>, and has been featured on CNN several times. Interviews with Iris, and reviews of her work, have appeared in <i>Time, O: The Oprah Magazine, Glamour, The New Yorker, U.S. News &amp; World Report, </i>and<i> Redbook</i>. </p>
+          <p>Iris is a longtime journalism professor at American University in Washington, D.C. </p>
+          <p class="text-center">Read more at <a href="http://iriskrasnow.com/">www.iriskrasnow.com</a>.</p>
+        </div>
+      </div>
     </div> <!-- #about -->
 
-    <div class="page" id="how">
+    <div class="page" id="how-page">
     </div> <!-- #how -->
 
-    <div class="page" id="submit">
+    <div class="page" id="submit-page">
     </div> <!-- submit -->
 
     <div class="row">
       <div class="col-md-8">
         <h4>
-          <a class="footer-li" id="home-footer" href="#">Home Page</a> &middot;
-          <a class="footer-li" id="about-footer" href="#about">About Iris</a> &middot;
-          <a class="footer-li" id="how-footer" href="#how">How it Works</a> &middot;
-          <a class="footer-li" id="submit-footer" href="#submit">Submit Writing</a>
+          <a href="#">Home Page</a> &middot;
+          <a href="#about">About Iris</a> &middot;
+          <a href="#how">How it Works</a> &middot;
+          <a href="#submit">Submit Writing</a>
         </h4>
       </div>
       <div class="col-md-4">
