Added how page.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p>Iris Krasnow is a seasoned journalist, writing professor and New York Times bestselling author who coaches private clients in all things that require the written word. She can help you with a range of documents ― anything that demands that you come off as a focused and capable STAR on the printed page.</p>
         </div>
       </div>
-    </div> <!-- #home -->
+    </div> <!-- #home-page -->
 
     <div class="page" id="about-page">
       <div class="row">
@@ -190,13 +190,45 @@
           <p class="text-center">Read more at <a href="http://iriskrasnow.com/">www.iriskrasnow.com</a>.</p>
         </div>
       </div>
-    </div> <!-- #about -->
+    </div> <!-- #about-page -->
 
     <div class="page" id="how-page">
-    </div> <!-- #how -->
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1>How it Works</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <br>
+          <img class="img-circle" src="img/bookshelf.png" alt="Bookshelf Close-Up">
+        </div>
+        <div class="col-md-8">
+          <h3>Receive Feedback in 4 Easy Steps</h3>
+          <ol>
+            <li><p>Fill out and submit the simple form found <a href="submit.php">here</a>.</li>
+            <li><p>Shortly thereafter, you will receive a response email with a review of your submission, a preliminary estimate, and a PayPal invoice notice.</p></li>
+            <li><p>Enter your credit card or PayPal information through PayPal's guaranteed-secure invoice service.</p></li>
+            <li><p>Receive valuable feedback and corrections helping to move your paper towards its finalized form.</p></li>
+          </ol>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <img class="img-circle" src="img/angledtext.png" alt="Angled Text Close-Up">
+        </div>
+        <div class="col-md-8">
+          <h3>Pricing</h3>
+          <p>Pricing varies upon the intended purpose for the submission, the length of the draft, and the desired forms of feedback: proof-read paper, follow-up phone call, in-person meeting, etc.</p>
+        </div>
+      </div>
+    </div> <!-- #how-page -->
 
     <div class="page" id="submit-page">
-    </div> <!-- submit -->
+    </div> <!-- #submit-page -->
+
+    <br>
 
     <div class="row">
       <div class="col-md-8">
